--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,11 @@ td {
     margin-left: 40%;
 }
 
+#presentacion img {
+    max-width: 100%;
+    height: auto;
+}
+
 .navtext {
     text-decoration: underline;
 }
