Cambios de formato

--- a/css/index.css
+++ b/css/index.css
@@ -299,3 +299,10 @@ td {
 .form-botones {
     text-align: center;
 }
+.precio{
+    border:1px solid black;
+    text-align:center;
+    margin-left: 30%;
+    width: 50%;
+    height: 100%;
+}
