--- a/css/galeria.css
+++ b/css/galeria.css
@@ -80,8 +80,8 @@
 .cerrar {
 	display: block;
 	background: #fff;
-	width: 25px;
-	height: 25px;
+	width: 100px;
+	height: 60px;
 	margin: 15px auto;
 	text-align: center;
 	text-decoration: none;
@@ -90,4 +90,8 @@
 	padding: 5px;
 	border-radius: 50%;
 	line-height: 25px;
+	cursor: pointer;
+}
+.Descripcion{
+	text-align: justify;
 }
